fixes overflow issue in firefox

--- a/styles.css
+++ b/styles.css
@@ -67,7 +67,7 @@ html.light-theme {
   box-sizing: content-box;
   margin: 7vh auto;
   min-height: 60vh;
-  max-width: 30vw;
+  max-width: 35vw;
   --space: 2.6rem;
   display: flex;
   flex-direction: column;
@@ -350,6 +350,7 @@ html.light-theme .counter:hover div {
   }
   html {
     background: url(./images/bg-mobile-dark.jpg) center top no-repeat;
+    background-color: var(--DarkTheme-Dark-Blue);
   }
 
   html.light-theme {
@@ -390,7 +391,7 @@ html.light-theme .counter:hover div {
     background-color: var(--DarkTheme-Desaturated-Blue);
     border-radius: 4px;
     margin: 16px 0px;
-    padding: 15px 81px;
+    padding: 15px 35px;
     color: var(--DarkTheme-Grayish-Blue);
   }
 
